Refactor: Modernize Stream API usage in AWS2 component and Opensearch tests