@@ -17,7 +17,6 @@
 package org.apache.camel.quarkus.component.aws2.iam.deployment;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
@@ -55,7 +54,7 @@ class Aws2IamProcessor {
         List<String> knownInterceptorImpls = combinedIndexBuildItem.getIndex()
                 .getAllKnownImplementations(EXECUTION_INTERCEPTOR_NAME)
                 .stream()
-                .map(c -> c.name().toString()).collect(Collectors.toList());
+                .map(c -> c.name().toString()).toList();
 
         reflectiveClasses.produce(
                 ReflectiveClassBuildItem.builder(knownInterceptorImpls.toArray(new String[knownInterceptorImpls.size()]))
